# roughVol

./: .gitignore  Makefile  README.md  Schedule.text  pyproject.toml
bootstrap/: setup.py
docs/: platform_blueprint.md
notebooks/: Py_note.ipynb  pricing_research.ipynb  roughvol_research copy.ipynb  roughvol_research.ipynb
notes/: pricing_research.md  roughvol_research.md
output/calibration/: calibration_cache.json  short_term_calibration_cache.json
output/calibration/short_term_snapshots/: 2026-04-07.json  2026-04-08.json
output/convergence/: heston_cf_cache.json  rh_benchmark_cache_1cf5c3016ba47fca.json  rh_benchmark_cache_32fdeabd5d8f64eb.json  rh_benchmark_cache_6d7878cd3fd9e149.json  rh_sim_cache_250f6c5ec11337de.json  rh_sim_cache_705f4041eed7bdf8.json  rh_sim_cache_ff164b6241ca21b5.json
output/rough_estimate/: empirical_roughness_cache.json
proto/: rough_pricing.proto
roughvol/: __init__.py
scripts/: setup.py
src/engines/: mc.py
src/models/: black_scholes.py
src/roughvol/: logging_utils.py  types.py
src/roughvol/analytics/: __init__.py  black_scholes.py  black_scholes_formula.py  heston_pricer.py  rough_heston_pricer.py  roughness.py
src/roughvol/calibration/: calibration.py  (+1 more)
tests/: bench_markovian_lift_jax.py  bench_nnls_vs_bb.py  test_MC.py  test_antithetic.py  test_asian.py  test_calibration_cache.py  test_calibration_toolbox.py  test_convergence_rh.py  test_empirical_roughness_demo.py  test_model_lab.py  test_rough_bergomi.py  test_rough_heston.py  test_rough_heston_pricer.py  test_roughness.py  test_short_term_calibration.py
(+82 files in other folders)
